--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.7.31",
@@ -55,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/numeral": "^2.0.3"
   }
 }
